Added switch method in ZoneController & Fix 12611

--- a/client/scss/components/_status-tag.scss
+++ b/client/scss/components/_status-tag.scss
@@ -56,8 +56,10 @@ button.w-status:hover {
   color: theme('colors.text-button-outline-hover');
 }
 
-// Special case for text-transform: uppercase.
 .page-status-tag {
+  @apply w-inline-flex w-items-center w-justify-center w-whitespace-nowrap w-px-1 w-ml-3 w-text-11 w-rounded-sm w-bg-transparent w-text-text-meta w-border w-border-border-furniture w-no-underline w-font-semibold hover:w-border-surface-menus hover:w-text-text-label w-transition more-contrast:w-border more-contrast:w-border-border-interactive-more-contrast hover:more-contrast:w-border-border-interactive-more-contrast-hover;
+
+  // Special case for text-transform: uppercase.
   // stylelint-disable-next-line property-disallowed-list
   text-transform: uppercase;
 }
