--- a/wagtail/admin/templates/wagtailadmin/shared/side_panels/includes/status/privacy.html
+++ b/wagtail/admin/templates/wagtailadmin/shared/side_panels/includes/status/privacy.html
@@ -4,21 +4,37 @@
 {% block content %}
     {% test_page_is_public page as is_public %}
 
-    {# The swap between public and private text is done using JS inside of privacy-switch.js when the response from the modal comes back #}
-    <div class="{% if not is_public %}w-hidden{% endif %}" data-privacy-sidebar-public>
-        {% trans 'Page visibility: ' as screen_reader_title_prefix %}
-        {% trans 'Visible to all' as title %}
-        {% trans 'Once live anyone can view' as help_text %}
-        {% with icon_name='view' %}
-            {{ block.super }}
-        {% endwith %}
-    </div>
-    <div class="{% if is_public %}w-hidden{% endif %}" data-privacy-sidebar-private>
-        {% trans 'Private' as title %}
-        {% trans 'Not visible to the public' as help_text %}
-        {% with icon_name='no-view' %}
-            {{ block.super }}
-        {% endwith %}
+    <div>
+        {# The swap between public and private text is done using JS inside of privacy-switch.js when the response from the modal comes back #}
+        <div
+            data-privacy-sidebar-public
+            class="{% if not is_public %}w-hidden{% endif %}"
+            data-controller="w-zone"
+            data-action="w-privacy:changed@document->w-zone#switch"
+            data-w-zone-inactive-class="w-hidden"
+            data-w-zone-mode-value="{% if is_public %}active{% endif %}"
+            data-w-zone-switch-key-value="isPublic">
+            {% trans 'Page visibility: ' as screen_reader_title_prefix %}
+            {% trans 'Visible to all' as title %}
+            {% trans 'Once live anyone can view' as help_text %}
+            {% with icon_name='view' %}
+                {{ block.super }}
+            {% endwith %}
+        </div>
+        <div
+            data-privacy-sidebar-private
+            class="{% if is_public %}w-hidden{% endif %}"
+            data-controller="w-zone"
+            data-action="w-privacy:changed@document->w-zone#switch"
+            data-w-zone-inactive-class="w-hidden"
+            data-w-zone-mode-value="{% if not is_public %}active{% endif %}"
+            data-w-zone-switch-key-value="!isPublic">
+            {% trans 'Private' as title %}
+            {% trans 'Not visible to the public' as help_text %}
+            {% with icon_name='no-view' %}
+                {{ block.super }}
+            {% endwith %}
+        </div>
     </div>
     {% trans 'Change privacy' as set_privacy_title %}
     {% trans 'Choose who can view the live version of this page' as set_privacy_message %}
